--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hero-text">
-								<h2>Maria Williams</h2>
+								<h2>Amir H. Mardan</h2>
 								<p>I’m a digital designer in love with photography, painting and discovering new worlds and cultures.</p>
 							</div>
 							<div class="hero-info">
 								<h2>General Info</h2>
 								<ul>
-									<li><span>Date of Birth</span>Aug 25, 1988</li>
+									<li><span>Date of Birth</span>July 29, 1991</li>
 									<li><span>Address</span>Rosia Road 55, Gibraltar, UK</li>
 									<li><span>E-mail</span>mariawilliams@company.com</li>
 									<li><span>Phone </span>+43 5266 22 345</li>
