--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hero-text">
-								<h2>Amir H. Mardan</h2>
-								<p>I’m a digital designer in love with photography, painting and discovering new worlds and cultures.</p>
+								<h2>Name</h2>
+								<p>I am workin on this page and the information isn't correct</p>
 							</div>
 							<div class="hero-info">
 								<h2>General Info</h2>
@@ -75,7 +75,7 @@
 						</div>
 						<div class="col-lg-6">
 							<figure class="hero-image">
-								<img src="img/hero.jpeg" alt="5">
+								<img src="img/hero_3333.jpeg" alt="5">
 							</figure>
 						</div>
 					</div>
