--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="col-lg-6">
 							<div class="hero-text">
 								<h2>Name</h2>
-								<p>I am workin on this page and the information isn't correct</p>
+								<p>I am working on this page and the information is not correct</p>
 							</div>
 							<div class="hero-info">
 								<h2>General Info</h2>
