--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="01-cv-portfolio/AmirHMardan.pdf">Download CV</a>
+			<a class="downlad-btn" href="01-cv-portfolio/AmirHMardan.pdf" target="_blank">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
@@ -202,7 +202,7 @@
 						
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".5">
+								<div class="radial-progress" data-prog-percent=".0">
 									<div></div>
 									<h6 class="progress-title">... </h6>
 								</div>
@@ -211,7 +211,7 @@
 						
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".5">
+								<div class="radial-progress" data-prog-percent=".0">
 									<div></div>
 									<h6 class="progress-title">...</h6>
 								</div>
