--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 						<div class="education margin-b-50">
 							<h4><b>Ph.D. in Earth Sciences</b></h4>
 							<h5 class="font-yellow"><b>Institut national de la recherche scientifique (INRS)</b></h5>
-							<h6 class="font-lite-black margin-t-10">Started IN September 2018</h6>
+							<h6 class="font-lite-black margin-t-10">Started in September 2018</h6>
 							<!--<p class="margin-tb-30">Duis non volutpat arcu, eu mollis tellus. Sed finibus aliquam neque sit amet sodales.
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla maximus pellentes que velit, 
 							quis consequat nulla effi citur at. Maecenas sed massa tristique.Duis non volutpat arcu, 
