--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div class="intro">
 						<div class="profile-img"><img src="images/profile-1-250x250.jpg" alt=""></div>
 						<h2><b>Amir mardan</b></h2>
-						<h4 class="font-yellow">PhD student</h4>
+						<h4 class="font-yellow">Student</h4>
 						<ul class="information margin-tb-30">
 							<!--<li><b>BORN : </b>August 25, 1987</li>-->
 							<li><b>EMAIL : </b>amirhossein.mardan@ete.inrs.ca</li>
