--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<li><a href="https://www.linkedin.com/in/amirmardan/" target="_blank"><i class="ion-social-linkedin"></i></a></li>
                             <li><a href="https://www.researchgate.net/profile/Amir_Mardan2/" target="_blank"><i class="ion-ios-book"></i></a></li>
                             <li><a href="https://github.com/AmirMardan" target="_blank"><i class="ion-social-github"></i></a></li>
-							<li><a href="https://www.facebook.com/ahmardan69" target="_blank"><i class="ion-social-facebook"></i></a></li>
+<!--                            <li><a href="https://www.facebook.com/ahmardan69" target="_blank"><i class="ion-social-facebook"></i></a></li>-->
 <!--                            <li><a href="#"><i class="ion-social-twitter"></i></a></li>-->
 						</ul>
 					</div><!-- intro -->
