--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="01-cv-portfolio/AmirHMardan.pdf" target="_blank">Download CV</a>
-			<a class="downlad-btn_pyfwi" href="https://pyfwi.readthedocs.io/en/latest/index.html" target="_blank">PyFWI</a>
+			<a class="downlad-btn_cv downlad-btn" href="01-cv-portfolio/AmirHMardan.pdf" target="_blank">Download CV</a>
+			<a class="downlad-btn_pyfwi downlad-btn" href="https://pyfwi.readthedocs.io/en/latest/index.html" target="_blank">PyFWI</a>
 		</div><!-- container -->
 	</header>
 	
