--- a/fwigan.html
+++ b/fwigan.html
@@ -109,7 +109,7 @@
           <p>
             Numerous steps of seismic data processing rely on a velocity model of the subsurface.
             Although full-waveform inversion has shown its capability to provide high-resolution images of the subsurface,
-            this method suffers from different problems such as cycle-skipping, crosstalk between parameters, etc.
+            this method suffers from different problems such as cycle-skipping and crosstalk between parameters.
             Currently, I'm working on generative adversarial networks (GANs) to build an accurate image of the subsurface while avoiding the issues of FWI.
             <br>
             I will update this post in the future.
