--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 time-lapse tool (TL-FWI). TL-FWI is a powerful tool to monitor
                 changes under the surface that could occur as a result of
                 extraction from, or injection to, reservoirs. Due to the
-                importance of monitoring the saturation of injected CO2 for
+                importance of monitoring the saturation of injected CO<sub>2</sub> for
                 <mark>carbon capture and storage</mark> (CCS), TL-FWI has an
                 important contribution to the environment. In addition to
                 TL-FWI, our application can be a useful tool for other sections
@@ -180,7 +180,7 @@
           <!-- Intro about research interests-->
           <h3 class="dark-color">Research Interests</h3>
           <p>
-            Currently, I'm focusing on full-waveform inversion and its applications for monitoring the subsurface. 
+            Currently, I'm focusing on full-waveform inversion (FWI) and its applications for monitoring the subsurface. 
             Having experience in using machine learning techniques for facies analysis and feature detection in seismic data, 
             I'm also interested in using deep learning for velocity analysis and fluid monitoring in the subsurface. 
             Here are short summaries of the projects that I've worked on.
@@ -208,7 +208,7 @@
                 <p>
                   Estimating an accurate velocity model of the subsurface is
                   critical in seismic studies. Although FWI has been
-                  employed for this purpose, this technique suffers from
+                  employed for this purpose, this approach suffers from
                   numerous technical problems. In my current project, I've been
                   using deep learning methods to obtain an appropriate velocity
                   model.
@@ -234,12 +234,12 @@
                   >
                 </h5>
                 <p>
-                  Full-waveform inversion (FWI) is a powerful technique to
+                  FWI is a powerful technique to
                   recover high-resolution images of the subsurface. Time-lapse
-                  FWI can reveal highly valuable information that is critical in
-                  petroleum industry for reservoir management. This method can
+                  FWI can reveal highly valuable information that is significantly important in
+                  the petroleum industry for reservoir management. This method can
                   also be employed to monitor the saturation of CO<sub>2</sub>
-                  in a field of Carbon capture and sequestration.
+                  for the purpose of carbon capture and sequestration.
                 </p>
               </div>
             </div>
@@ -263,7 +263,7 @@
                   >
                 </h5>
                 <p>
-                  Machin learning techniques can be used to improve our
+                  Machine learning techniques can be used to improve our
                   understanding of seismic data. Supervised and unsupervised
                   learning methods can be used to detect geological features
                   from seismic data. As an example, I studied one of the Iranian
