--- a/seismi_interpretation.html
+++ b/seismi_interpretation.html
@@ -108,7 +108,7 @@
           <h3 class="dark-color">Seismic data interpretation using machine learning
             techniques</h3>
           <p>
-            Machin learning techniques can be used to improve our
+            Machine learning techniques can be used to improve our
                   understanding of seismic data. Supervised and unsupervised
                   learning methods can be used to detect geological features
                   from seismic data. As an example, I studied one of the Iranian
