--- a/tlfwi.html
+++ b/tlfwi.html
@@ -107,12 +107,12 @@
           <!-- Intro about research interests-->
           <h3 class="dark-color">Reservoir monitoring using time-lapse FWI</h3>
           <p>
-            Full-waveform inversion (FWI) is a powerful technique to
+            FWI is a powerful technique to
                   recover high-resolution images of the subsurface. Time-lapse
-                  FWI can reveal highly valuable information that is critical in
-                  petroleum industry for reservoir management. This method can
+                  FWI can reveal highly valuable information that is significantly important in
+                  the petroleum industry for reservoir management. This method can
                   also be employed to monitor the saturation of CO<sub>2</sub>
-                  in a field of Carbon capture and sequestration.
+                  for the purpose of carbon capture and sequestration.
           </p>
         </div>
       </div>
