fixing the cv link

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   class="github hyperlink_button"
                   href="https://github.com/AmirMardan"
                   target="_blank"
-                  >Git-Hub</a
+                  >GitHub</a
                 >
                 <a
                   class="linkein hyperlink_button"
@@ -151,7 +151,7 @@
                 >
                 <a
                   class="cv hyperlink_button"
-                  href="https://amirmardan.github.io/01-cv-portfolio/AmirHMardan.pdf"
+                  href="https://amirmardan.github.io/doc/Amir_Mardan.pdf"
                   target="_blank"
                   >CV</a
                 >
