--- a/tlfwi.html
+++ b/tlfwi.html
@@ -10,6 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/title.css" />
     <link rel="stylesheet" href="css/navbar.css" />
@@ -113,11 +114,25 @@
                   the petroleum industry for reservoir management. This method can
                   also be employed to monitor the saturation of CO<sub>2</sub>
                   for the purpose of carbon capture and sequestration.
+                <br>
+                The results of this study are presented in the follwoing links
           </p>
+          <!-- Auto width -->
+          <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')">
+            <i class="fa fa-download"></i>
+            Weighted-average TL-FWI
+            </button><br>
+            <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_image.pdf','_blank')">
+              <i class="fa fa-download"></i>
+              Direct monitoring of fluid saturation using TL-FWI
+              </button><br>
+              <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/pyfwi.pdf','_blank')">
+                <i class="fa fa-download"></i>
+                PyFWI: A Python package for performing FWI and TL-FWI
+                </button>
         </div>
       </div>
     </div>
-
     <!-- Footer -->
     <footer id="contact_us" class="w-100 py-4 flex-shrink-0">
       <div class="container py-4">
