--- a/tlfwi.html
+++ b/tlfwi.html
@@ -126,7 +126,7 @@
               <i class="fa fa-download"></i>
               Direct monitoring of fluid saturation using TL-FWI
               </button><br>
-              <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/pyfwi.pdf','_blank')">
+              <button class="btn" onclick=" window.open('https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4330227','_blank')">
                 <i class="fa fa-download"></i>
                 PyFWI: A Python package for performing FWI and TL-FWI
                 </button>
@@ -142,7 +142,7 @@
             <p class="small text-muted">
               Thanks for visiting this website. If you want to chat about
               Geoscience, machine learning, or related topics, please contact me
-              via <mark class="email"><strong>amirhossein.mardan [at] inrs.ca</strong></mark>
+              via <mark class="email"><strong>mardan [at] stanford.edu</strong></mark>
             </p>
             <p class="small text-muted mb-0">
               &copy; Copyrights. All rights reserved.
