--- a/index.html
+++ b/index.html
@@ -119,22 +119,22 @@
                 A Computational Seismologist &amp; Machine Learning Practitioner
               </h6>
               <p>
-                Hello! I'm Amir, a PhD candidate in Earth Science studying
-                Geophysics (<mark>seismology</mark>) and based in Quebec City,
-                Canada. For my master's degree, I used
-                <mark>machine learning</mark> for detection of channels and
+                Hello! I'm Amir. I have a PhD in Earth Science and I study
+                Geophysics (<mark>seismology</mark>).
+                For my master's degree, I used
+                <mark>machine learning</mark> to detect channels and
                 faults in seismic data. In addition to my thesis work, I used
                 clustering techniques for <mark>facies analysis</mark> in
-                oilfields in the south of Iran. Currently, I work on
+                multiple oilfields. During my PhD, I worked on
                 <mark>full-waveform inversion</mark> (FWI) to apply it as a
-                time-lapse tool (TL-FWI). TL-FWI is a powerful tool to monitor
-                changes under the surface that could occur as a result of
-                extraction from, or injection to, reservoirs. Due to the
-                importance of monitoring the saturation of injected CO<sub>2</sub> for
-                <mark>carbon capture and storage</mark> (CCS), TL-FWI has an
-                important contribution to the environment. In addition to
-                TL-FWI, our application can be a useful tool for other sections
-                of seismology.
+                time-lapse tool (TL-FWI) to monitor
+                changes in the subsurface that could occur as a result of
+                extraction from, or injection into, reservoirs. TL-FWI has an
+                important role in monitoring the saturation of injected CO<sub>2</sub> for
+                <mark>carbon capture and storage</mark> (CCS).
+                Currently, I'm a postdoctoral researcher developing a processing pipeline
+                using <mark>artificial intelligence</mark> (AI) 
+                to process near-surface seismic data. 
               </p>
               <div class="links">
                 <a
