--- a/seismi_interpretation.html
+++ b/seismi_interpretation.html
@@ -10,6 +10,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/title.css" />
     <link rel="stylesheet" href="css/navbar.css" />
@@ -113,8 +114,18 @@
                   learning methods can be used to detect geological features
                   from seismic data. As an example, I studied one of the Iranian
                   oilfields to detect the channels and faults.
-            <br>
-            I will update this post in the future.
+                  <br>
+                  The results of this study are presented in the follwoing links.
+            </p>
+            <!-- Auto width -->
+            <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/eage_2017.pdf','_blank')">
+              <i class="fa fa-download"></i>
+              Channel characterization using support vector machine (SVM)
+              </button><br>
+              <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/eage_2018.pdf','_blank')">
+                <i class="fa fa-download"></i>
+                Channel detection using unsupervised learning techniques
+                </button>
           </p>
         </div>
       </div>
