--- a/tlfwi.html
+++ b/tlfwi.html
@@ -115,12 +115,12 @@
                   also be employed to monitor the saturation of CO<sub>2</sub>
                   for the purpose of carbon capture and sequestration.
                 <br>
-                The results of this study are presented in the follwoing links
+                The results of this study are presented in the follwoing links.
           </p>
           <!-- Auto width -->
           <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')">
             <i class="fa fa-download"></i>
-            Weighted-average TL-FWI
+            Weighted-average time-lapse seismic full-waveform inversion
             </button><br>
             <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_image.pdf','_blank')">
               <i class="fa fa-download"></i>
