--- a/tlfwi.html
+++ b/tlfwi.html
@@ -120,15 +120,17 @@
           <!-- Auto width -->
           <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')">
             <i class="fa fa-download"></i>
-            Weighted-average TL-FWI
-            </button><br>
+            Weighted-average time-lapse seismic full-waveform inversion, 
+            </button>
+            <a href="https://doi.org/10.1190/geo2022-0090.1" target="_blank">subject to SEG terms of use and conditions</a>
+            <br>
             <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_image.pdf','_blank')">
               <i class="fa fa-download"></i>
-              Direct monitoring of fluid saturation using TL-FWI
+              Direct monitoring of fluid saturation using time-lapse seismic full-waveform inversion,
               </button><br>
               <button class="btn" onclick=" window.open('https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4330227','_blank')">
                 <i class="fa fa-download"></i>
-                PyFWI: A Python package for performing FWI and TL-FWI
+                PyFWI: A Python package for performing FWI and TL-FWI.
                 </button>
         </div>
       </div>
@@ -164,6 +166,7 @@
             <h5 class="text-white mb-3">Quick link</h5>
             <ul class="list-unstyled text-muted">
               <li><a href="index.html">Home</a></li>
+              <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
               <!-- <li><a href="index.html">About</a></li>
               <li><a href="#research">Research interests</a></li>
               <li><a href="#contact_us">Get in touch</a></li> -->
