--- a/fwigan.html
+++ b/fwigan.html
@@ -149,6 +149,7 @@
             <h5 class="text-white mb-3">Quick link</h5>
             <ul class="list-unstyled text-muted">
               <li><a href="index.html">Home</a></li>
+              <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
               <!-- <li><a href="index.html">About</a></li>
               <li><a href="#research">Research interests</a></li>
               <li><a href="#contact_us">Get in touch</a></li> -->
