--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="col-lg-4">
             <div class="about-avatar">
               <img
-                src="img/profile.jpeg"
+                src="img/profile_2023.png"
                 title=""
                 alt=""
               />
@@ -310,6 +310,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#research">Research interests</a></li>
               <li><a href="#contact_us">Get in touch</a></li>
+              <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
             </ul>
           </div>
         </div>
