--- a/tlfwi.html
+++ b/tlfwi.html
@@ -124,11 +124,11 @@
             </button>
             <a href="https://doi.org/10.1190/geo2022-0090.1" target="_blank">subject to SEG terms of use and conditions</a>
             <br>
-            <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_image.pdf','_blank')">
+            <button class="btn" onclick=" window.open('https://arxiv.org/abs/2303.03136','_blank')">
               <i class="fa fa-download"></i>
               Direct monitoring of fluid saturation using time-lapse seismic full-waveform inversion,
               </button><br>
-              <button class="btn" onclick=" window.open('https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4330227','_blank')">
+              <button class="btn" onclick=" window.open('https://www.sciencedirect.com/science/article/pii/S2352711023000808','_blank')">
                 <i class="fa fa-download"></i>
                 PyFWI: A Python package for performing FWI and TL-FWI.
                 </button>
