--- a/dispersion.html
+++ b/dispersion.html
@@ -10,7 +10,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/title.css" />
     <link rel="stylesheet" href="css/navbar.css" />
@@ -106,35 +105,20 @@
       <div class="container">
         <div class="section-title text-left">
           <!-- Intro about research interests-->
-          <h3 class="dark-color">Reservoir monitoring using time-lapse FWI</h3>
+          <h3 class="dark-color">Automatic dispersion curve picking using deep learning</h3>
           <p>
-            FWI is a powerful technique to
-                  recover high-resolution images of the subsurface. Time-lapse
-                  FWI can reveal highly valuable information that is significantly important in
-                  the petroleum industry for reservoir management. This method can
-                  also be employed to monitor the saturation of CO<sub>2</sub>
-                  for the purpose of carbon capture and sequestration.
-                <br>
-                The results of this study are presented in the follwoing links.
-          </p>
-          <!-- Auto width -->
-          <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')">
-            <i class="fa fa-download"></i>
-            Weighted-average time-lapse seismic full-waveform inversion, 
-            </button>
-            <a href="https://doi.org/10.1190/geo2022-0090.1" target="_blank">subject to SEG terms of use and conditions</a>
+            Surface waves are dispersive meaning their velocity depends on the frequency content. 
+                  In a velocity dispersion panel, dispersion curves should be picked and inverted to 
+                  estimate an image of the subsurface. We have developed a Python package that can be 
+                  used to pick the fundamental mode automatically using deep learning. 
+                  This can reduce the processing time and subjectivity of the processing.
             <br>
-            <button class="btn" onclick=" window.open('https://onlinelibrary.wiley.com/doi/10.1111/1365-2478.13363','_blank')">
-              <i class="fa fa-download"></i>
-              Direct monitoring of fluid saturation using time-lapse seismic full-waveform inversion,
-              </button><br>
-              <button class="btn" onclick=" window.open('https://www.sciencedirect.com/science/article/pii/S2352711023000808','_blank')">
-                <i class="fa fa-download"></i>
-                PyFWI: A Python package for performing FWI and TL-FWI.
-                </button>
+            I will update this post in the future.
+          </p>
         </div>
       </div>
     </div>
+
     <!-- Footer -->
     <footer id="contact_us" class="w-100 py-4 flex-shrink-0">
       <div class="container py-4">
