update dispersion and fb project and activate research and about in all pages

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <p>
                   Manual first-break picking is a time-consuming and labor-intensive task.
                   This processing step is also subjective depending on who does the processing.
-                  At Geostack, we have developed tools to perform automatic first-break picking
+                  At <a href="https://www.geostack.ca/" target="_blank">Geostack</a>, we have developed tools to perform automatic first-break picking
                   using deep learning.
                 </p>
               </div>
@@ -259,10 +259,11 @@
                   >
                 </h5>
                 <p>
-                  Surface waves are dispersive meaning their velocity depends on the frequency content. 
+                  <!-- Surface waves are dispersive meaning their velocity depends on the frequency content.  -->
                   In a velocity dispersion panel, dispersion curves should be picked and inverted to 
                   estimate an image of the subsurface. We have developed a Python package that can be 
-                  used to pick the fundamental mode automatically using deep learning. This can reduce the processing time and subjectivity of the processing.
+                  used to pick the fundamental mode automatically using deep learning. 
+                  <!-- This reduces the processing time and subjectivity of the processing. -->
                 </p>
               </div>
             </div>
