--- a/seismi_interpretation.html
+++ b/seismi_interpretation.html
@@ -46,10 +46,10 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#about">About</a>
+              <a class="nav-link" href="../index.html#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#research">Research Interests</a>
+              <a class="nav-link " href="../index.html#research">Research Interests</a>
             </li>
             <li class="nav-item">
               <a href="doc/Amir_Mardan.pdf" class="nav-link" target="_blank"
