--- a/tlfwi.html
+++ b/tlfwi.html
@@ -10,7 +10,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/title.css" />
     <link rel="stylesheet" href="css/navbar.css" />
@@ -49,7 +52,9 @@
               <a class="nav-link" href="../index.html#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../index.html#research">Research Interests</a>
+              <a class="nav-link" href="../index.html#research"
+                >Research Interests</a
+              >
             </li>
             <li class="nav-item">
               <a href="doc/Amir_Mardan.pdf" class="nav-link" target="_blank"
@@ -108,30 +113,73 @@
           <!-- Intro about research interests-->
           <h3 class="dark-color">Reservoir monitoring using time-lapse FWI</h3>
           <p>
-            FWI is a powerful technique to
-                  recover high-resolution images of the subsurface. Time-lapse
-                  FWI can reveal highly valuable information that is significantly important in
-                  the petroleum industry for reservoir management. This method can
-                  also be employed to monitor the saturation of CO<sub>2</sub>
-                  for the purpose of carbon capture and sequestration.
-                <br>
-                The results of this study are presented in the follwoing links.
+            FWI is a powerful technique to recover high-resolution images of the
+            subsurface. Time-lapse FWI can reveal highly valuable information
+            that is significantly important in the petroleum industry for
+            reservoir management. This method can also be employed to monitor
+            the saturation of CO<sub>2</sub>
+            for the purpose of carbon capture and sequestration.
+            <br />
+            The results of this study are presented in the following links.
           </p>
           <!-- Auto width -->
-          <button class="btn" onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')">
+          <button
+            class="btn"
+            onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')"
+          >
             <i class="fa fa-download"></i>
-            Weighted-average time-lapse seismic full-waveform inversion, 
-            </button>
-            <a href="https://doi.org/10.1190/geo2022-0090.1" target="_blank">subject to SEG terms of use and conditions</a>
-            <br>
-            <button class="btn" onclick=" window.open('https://onlinelibrary.wiley.com/doi/10.1111/1365-2478.13363','_blank')">
-              <i class="fa fa-download"></i>
-              Direct monitoring of fluid saturation using time-lapse seismic full-waveform inversion,
-              </button><br>
-              <button class="btn" onclick=" window.open('https://www.sciencedirect.com/science/article/pii/S2352711023000808','_blank')">
-                <i class="fa fa-download"></i>
-                PyFWI: A Python package for performing FWI and TL-FWI.
-                </button>
+            Weighted-average time-lapse seismic full-waveform inversion,
+          </button>
+          <a href="https://doi.org/10.1190/geo2022-0090.1" target="_blank"
+            >subject to SEG terms of use and conditions</a
+          >
+          <br />
+          <button
+            class="btn"
+            onclick=" window.open('https://onlinelibrary.wiley.com/doi/10.1111/1365-2478.13363','_blank')"
+          >
+            <i class="fa fa-download"></i>
+            Direct monitoring of fluid saturation using time-lapse seismic
+            full-waveform inversion</button
+          ><br />
+          <button
+            class="btn"
+            onclick=" window.open('https://www.sciencedirect.com/science/article/pii/S2352711023000808','_blank')"
+          >
+            <i class="fa fa-download"></i>
+            PyFWI: A Python package for performing FWI and TL-FWI
+          </button>
+          <hr />
+          <button
+            class="btn"
+            onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi_eage.pdf','_blank')"
+          >
+            <i class="fa fa-download"></i>
+            Time-Lapse seismic full-Waveform inversion using improved cascaded method (weighted-average TL-FWI)
+          </button>
+          <br />
+          <button
+            class="btn"
+            onclick=" window.open('https://amirmardan.github.io/doc/nonrepeatability.pdf','_blank')"
+          >
+            <i class="fa fa-download"></i>
+            Effects of nonrepeatability on time-lapse full-Waveform inversion</button
+          ><br />
+          <button
+            class="btn"
+            onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_eage.pdf','_blank')"
+          >
+            <i class="fa fa-download"></i>
+            Time-lapse full-waveform inversion for monitoring the fluid saturation
+          </button>
+          <br />
+          <button
+            class="btn"
+            onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_image.pdf','_blank')"
+          >
+            <i class="fa fa-download"></i>
+            Direct monitoring of fluid saturation using time-lapse full-waveform inversion</button
+          >
         </div>
       </div>
     </div>
@@ -144,7 +192,10 @@
             <p class="small text-muted">
               Thanks for visiting this website. If you want to chat about
               Geoscience, machine learning, or related topics, please contact me
-              via <mark class="email"><strong>mardan [at] stanford.edu</strong></mark>
+              via
+              <mark class="email"
+                ><strong>mardan.amir.h [at] gmail.com</strong></mark
+              >
             </p>
             <p class="small text-muted mb-0">
               &copy; Copyrights. All rights reserved.
@@ -166,7 +217,11 @@
             <h5 class="text-white mb-3">Quick link</h5>
             <ul class="list-unstyled text-muted">
               <li><a href="index.html">Home</a></li>
-              <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
+              <li>
+                <a href="https://profiles.stanford.edu/mardan" target="_blank"
+                  >Stanford Profile</a
+                >
+              </li>
               <!-- <li><a href="index.html">About</a></li>
               <li><a href="#research">Research interests</a></li>
               <li><a href="#contact_us">Get in touch</a></li> -->
