--- a/seismi_interpretation.html
+++ b/seismi_interpretation.html
@@ -140,7 +140,7 @@
             <p class="small text-muted">
               Thanks for visiting this website. If you want to chat about
               Geoscience, machine learning, or related topics, please contact me
-              via <mark class="email"><strong>mardan [at] stanford.edu</strong></mark>
+              via <mark class="email"><strong>mardan.amir.h [at] gmail.com</strong></mark>
             </p>
             <p class="small text-muted mb-0">
               &copy; Copyrights. All rights reserved.
