--- a/tlfwi.html
+++ b/tlfwi.html
@@ -125,7 +125,7 @@
           <!-- Auto width -->
           <button
             class="btn"
-            onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi.pdf','_blank')"
+            onclick=" window.open('https://amirmardan.github.io/doc/tlfwi/wa_tlfwi.pdf','_blank')"
           >
             <i class="fa fa-download"></i>
             Weighted-average time-lapse seismic full-waveform inversion,
@@ -152,7 +152,7 @@
           <hr />
           <button
             class="btn"
-            onclick=" window.open('https://amirmardan.github.io/doc/wa_tlfwi_eage.pdf','_blank')"
+            onclick=" window.open('https://amirmardan.github.io/doc/tlfwi/wa_tlfwi_eage.pdf','_blank')"
           >
             <i class="fa fa-download"></i>
             Time-Lapse seismic full-Waveform inversion using improved cascaded method (weighted-average TL-FWI)
@@ -160,14 +160,14 @@
           <br />
           <button
             class="btn"
-            onclick=" window.open('https://amirmardan.github.io/doc/nonrepeatability.pdf','_blank')"
+            onclick=" window.open('https://amirmardan.github.io/doc/tlfwi/nonrepeatability.pdf','_blank')"
           >
             <i class="fa fa-download"></i>
             Effects of nonrepeatability on time-lapse full-Waveform inversion</button
           ><br />
           <button
             class="btn"
-            onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_eage.pdf','_blank')"
+            onclick=" window.open('https://amirmardan.github.io/doc/tlfwi/direct_saturation_eage.pdf','_blank')"
           >
             <i class="fa fa-download"></i>
             Time-lapse full-waveform inversion for monitoring the fluid saturation
@@ -175,7 +175,7 @@
           <br />
           <button
             class="btn"
-            onclick=" window.open('https://amirmardan.github.io/doc/direct_saturation_image.pdf','_blank')"
+            onclick=" window.open('https://amirmardan.github.io/doc/tlfwi/direct_saturation_image.pdf','_blank')"
           >
             <i class="fa fa-download"></i>
             Direct monitoring of fluid saturation using time-lapse full-waveform inversion</button
