--- a/fb.html
+++ b/fb.html
@@ -1,179 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/title.css" />
-    <link rel="stylesheet" href="css/navbar.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&family=Space+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link 
+  rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/title.css" />
+  <link rel="stylesheet" href="css/navbar.css" />
 
-    <title>Amir H. Mardan</title>
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&family=Space+Mono:wght@400;700&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <nav class="navbar navbar-expand-lg fixed-top py-3">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Amir H. Mardan</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="../index.html#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="../index.html#research">Research Interests</a>
-            </li>
-            <li class="nav-item">
-              <a href="doc/Amir_Mardan.pdf" class="nav-link" target="_blank"
-                >CV</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                href="https://scholar.google.com/citations?user=HfZU6DkAAAAJ&hl=en"
-                class="nav-link"
-                target="_blank"
-                >Publications</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="#contact_us" class="nav-link">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+  <title>Amir H. Mardan</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg fixed-top py-3">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Amir H. Mardan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="../index.html#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="../index.html#research">Research Interests</a>
+          </li>
+          <li class="nav-item">
+            <a href="doc/Amir_Mardan.pdf" class="nav-link" target="_blank">CV</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://scholar.google.com/citations?user=MGowGMEAAAAJ&hl=en" class="nav-link"
+              target="_blank">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact_us" class="nav-link">Contact</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form>
       </div>
-    </nav>
-    <header>
-      <div class="container">
-        <div class="brief-about">
-          <span class="hi">Hi, I'm Amir </span>
-          <div class="dynamic-title cd-headline clip is-full-width">
-            <span>I'm&nbsp;</span>
-            <span class="cd-words-wrapper">
-              <b class="is-visible">
-                a&nbsp;<span class="gold-title">Programmer.</span></b
-              >
-              <b> a&nbsp;<span class="gold-title">Seismologist.</span></b>
-              <b>a&nbsp;<span class="gold-title">Researcher.</span></b>
-              <b>a&nbsp;<span class="gold-title">Data scientist.</span></b>
-              <b>a&nbsp;<span class="gold-title">Pythonista.</span></b>
-            </span>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- Research interest-->
-    <div id="research" class="section research">
-      <div class="container">
-        <div class="section-title text-left">
-          <!-- Intro about research interests-->
-          <h3 class="dark-color">Automatic first-break picking using deep learningAutomatic first-break picking using deep learning</h3>
-          <p>
-            Manual first-break picking is a time-consuming and labor-intensive task.
-            This processing step is also subjective depending on who does the processing.
-            At Geostack, we have developed tools to perform automatic first-break picking
-            using deep learning.
-            <br>
-            I will update this post in the future.
-          </p>
+    </div>
+  </nav>
+  <header>
+    <div class="container">
+      <div class="brief-about">
+        <span class="hi">Hi, I'm Amir </span>
+        <div class="dynamic-title cd-headline clip is-full-width">
+          <span>I'm&nbsp;</span>
+          <span class="cd-words-wrapper">
+            <b class="is-visible">
+              a&nbsp;<span class="gold-title">Programmer.</span></b>
+            <b> a&nbsp;<span class="gold-title">Seismologist.</span></b>
+            <b>a&nbsp;<span class="gold-title">Researcher.</span></b>
+            <b>a&nbsp;<span class="gold-title">Data scientist.</span></b>
+            <b>a&nbsp;<span class="gold-title">Pythonista.</span></b>
+          </span>
         </div>
       </div>
     </div>
+  </header>
+  <!-- Research interest-->
+  <div id="research" class="section research">
+    <div class="container">
+      <div class="section-title text-left">
+        <!-- Intro about research interests-->
+        <h3 class="dark-color">Automatic first-break picking using deep learningAutomatic first-break picking using deep
+          learning</h3>
+        <p>
+          Manual first-break picking is a time-consuming and labor-intensive task.
+          This processing step is also subjective depending on who does the processing.
+          At Geostack, we have developed tools to perform automatic first-break picking
+          using deep learning.
+          <br />
+        The results of this study are presented in the following link.
+        </p>
+        <!-- Auto width -->
+        <button class="btn" 
+        onclick=" window.open('https://arxiv.org/pdf/2404.07400.pdf','_blank')">
+          <i class="fa fa-download"></i>
+        A fine-tuning workflow for automatic first-break picking with deep learning
+        </button>
+        <br />
+        </p>
+      </div>
+    </div>
+  </div>
 
-    <!-- Footer -->
-    <footer id="contact_us" class="w-100 py-4 flex-shrink-0">
-      <div class="container py-4">
-        <div class="row gy-4 gx-5">
-          <div class="col-lg-4 col-md-6">
-            <h5 class="h1 text-white">Get in touch</h5>
-            <p class="small text-muted">
-              Thanks for visiting this website. If you want to chat about
-              Geoscience, machine learning, or related topics, please contact me
-              via <mark class="email"><strong>mardan.amir.h [at] gmail.com</strong></mark>
-            </p>
-            <p class="small text-muted mb-0">
-              &copy; Copyrights. All rights reserved.
-              <a class="text-primary" href="index.html">Amir Mardan</a>
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d55111.08067871604!2d-71.2182857010253!3d46.82477590525643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sca!4v1650567748881!5m2!1sen!2sca"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
-          <div class="col-lg-2 col-md-6">
-            <h5 class="text-white mb-3">Quick link</h5>
-            <ul class="list-unstyled text-muted">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
-              <!-- <li><a href="index.html">About</a></li>
+  <!-- Footer -->
+  <footer id="contact_us" class="w-100 py-4 flex-shrink-0">
+    <div class="container py-4">
+      <div class="row gy-4 gx-5">
+        <div class="col-lg-4 col-md-6">
+          <h5 class="h1 text-white">Get in touch</h5>
+          <p class="small text-muted">
+            Thanks for visiting this website. If you want to chat about
+            Geoscience, machine learning, or related topics, please contact me
+            via <mark class="email"><strong>mardan.amir.h [at] gmail.com</strong></mark>
+          </p>
+          <p class="small text-muted mb-0">
+            &copy; Copyrights. All rights reserved.
+            <a class="text-primary" href="index.html">Amir Mardan</a>
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d55111.08067871604!2d-71.2182857010253!3d46.82477590525643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sca!4v1650567748881!5m2!1sen!2sca"
+            width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col-lg-2 col-md-6">
+          <h5 class="text-white mb-3">Quick link</h5>
+          <ul class="list-unstyled text-muted">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
+            <!-- <li><a href="index.html">About</a></li>
               <li><a href="#research">Research interests</a></li>
               <li><a href="#contact_us">Get in touch</a></li> -->
-            </ul>
-          </div>
+          </ul>
         </div>
       </div>
-    </footer>
-    <!-- Footer -->
+    </div>
+  </footer>
+  <!-- Footer -->
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/title.js"></script>
-    <script src="scripts/blog.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="scripts/script.js"></script>
+  <script src="scripts/title.js"></script>
+  <script src="scripts/blog.js"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
