--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
             <li class="nav-item">
               <a
-                href="https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=1&hl=en&user=MGowGMEAAAAJ&authuser=1"
+                href="https://scholar.google.com/citations?user=MGowGMEAAAAJ&hl=en"
                 class="nav-link"
                 target="_blank"
                 >Publications</a
