--- a/seismi_interpretation.html
+++ b/seismi_interpretation.html
@@ -58,7 +58,7 @@
             </li>
             <li class="nav-item">
               <a
-                href="https://scholar.google.com/citations?user=HfZU6DkAAAAJ&hl=en"
+                href="https://scholar.google.com/citations?user=MGowGMEAAAAJ&hl=en"
                 class="nav-link"
                 target="_blank"
                 >Publications</a
