update menu bar

--- a/fwigan.html
+++ b/fwigan.html
@@ -67,6 +67,19 @@
                 >Publications</a
               >
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Software Tools
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="https://github.com/AmirMardan/PyFWI" target="_blank">PyFWI</a>
+                <a class="dropdown-item" href="https://github.com/AmirMardan/pinn_fwi" target="_blank">PIANN-FWI</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="https://github.com/geo-stack/first_break_picking" target="_blank">FB Picking</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item disabled" href="#"> seismic</a>
+              </div>
+            </li>
             <li class="nav-item">
               <a href="#contact_us" class="nav-link">Contact</a>
             </li>
@@ -179,5 +192,6 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
