--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#research">Research interests</a></li>
               <li><a href="#contact_us">Get in touch</a></li>
-              <li><a href="https://profiles.stanford.edu/mardan" target="_blank">Stanford Profile</a></li>
+              <li><a href="gimage.ca" target="_blank">GImage</a></li>
             </ul>
           </div>
         </div>
